# prism-protocol

./: .gitignore  ARCHITECTURE.md  ARCIUM_READY.md  Arcium.toml  CHANGELOG.md  CONVERSATION_SUMMARY.md  DEMO_SCRIPT.md  DEVNET_VS_LOCALNET.md  ENCRYPTION_DECISION.md  ENCRYPTION_VS_ZK.md  ERROR_HANDLING.md  HACKATHON_GAP_ANALYSIS.md  ONCHAIN_ENCRYPTION_STATUS.md  PRD.md  QUICK_START.md  README.md  SDK_PRODUCTION_PLAN.md  START_HERE.md  SUBMISSION.md  UPDATE_ENV.md  USE_CASES.md  WINNING_STRATEGY.md  WOW_FACTOR_STRATEGY.md  YOUTUBE_DESCRIPTIONS.md  copy-arcium-config.sh  idea.md  vercel.json
.github/workflows/: sdk-tests.yml
apps/demo/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/demo/hooks/: useToast.ts
apps/demo/lib/: usePrismProgram.ts
apps/demo/pages/: _app.tsx  dashboard.tsx  demo.tsx  index.tsx  user.tsx
circuits/solvency_proof/: COMPILATION_STATUS.md  Nargo.toml  Prover.toml
docs/: ARCHITECTURE_EXPLAINED.md  ARCIUM_CRYPTOGRAPHIC_FLOW.md  ARCIUM_READY.md  DARK_POOLS_AND_SOLANA.md  DASHBOARD_GAP_ANALYSIS.md  DEMO_SCRIPT.md  ENCRYPTION_DECISION.md  LANDING_NOIR_ANALYSIS.md  ONCHAIN_ENCRYPTION_STATUS.md  README.md  SDK_STATUS.md  TECHNICAL_WHAT_THE_SDK_ACTUALLY_DOES.md  UNDER_THE_HOOD_EXPLANATION.md
ideation/: ARCIUM_SETUP.md  CONVERSATION_SUMMARY.md  HACKATHON_ROADMAP.md  MASTER_CHECKLIST.md  README.md
lib/privacy/: arcium-chat.ts  arcium-conversation-encryption.ts
lib/types/: arcium.ts
prism/: Anchor.toml  Cargo.toml
prism/programs/prism/: Cargo.toml
prism/programs/prism/src/: lib.rs
(+38 files in other folders)
